syntax = "proto3";
package youtube_dl;

option go_package = "youtubeDL/";

import "error.proto";

message GetVideoInfoRequest {
    string videoURL = 1;
}

message RequestedFormats{
    uint64 filesize = 1;
    string format_id = 2;
    string url = 3;
    string ext = 4;
    string video_ext = 5;
    string audio_ext = 6;
}
message GetVideoInfoResponse {
    string id = 1;
    string title = 2;
    string thumbnail =3;
    repeated RequestedFormats requested_formats = 4;

}
message Response{
    oneof result{
        GetVideoInfoResponse info_response = 1;
        error.ErrorResponse error = 2;
    }
}

service GetVideoInfoService{
    rpc GetVideo(GetVideoInfoRequest) returns (Response){}
}